--- a/style.css
+++ b/style.css
@@ -1,315 +1,488 @@
 /*elementi esterni*/
 @import url("https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto:wght@100&display=swap");
-/*formattaione base della pagina*/
-* {
+
+
+/*formattazione base della pagina*/
+body; html{
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-/*stile body*/
-body {
-   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-}
-nav,
-main,
-footer {
-  padding: 0px;
-  color: #fff;
-}
-/*stile header*/
-header {
-  diplay: flex;
-  justify-content: space-between;
-  color: grey;
-  align-items: center;
-  font-family: "Concert One", cursive;
-  background-color: white;
-  padding: 0px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 01);
-}
-/*stile logo*/
-.logo {
- max-width: 90%;
- display: flex;
- justify-content:space-between; 
-}
-.logo img{
-  max-width: 15%;
-  height: auto;
-  float: left;
-  padding: 5px;
-}
-/*stile nav */
-
-nav {
-  background-color: grey;
-  align-items: center;
-  display:flex;
- 
- 
+  font-size:16px;
+  text-decoration:none;
 }
 
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
- align-items: center;
-  float:right;
-}
-
-nav li {
-  margin: 5px;
-}
-
-nav a {
-  color: black;
-  text-decoration: none;
+/*stili di testo*/
+h1, .text-1{
+  font-size:3rem;
+    margin-bottom:0.5rem;
   font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  padding: 5px;
+  font-family: "Concert One", cursive;
 }
-nav a:hover {
-  border-bottom: 2px solid black;
+h2 .text-2{
+  font-size:2.4rem;
+    margin-bottom:1rem;
+}
+h3.text-3{
+  font-size:1.8rem;
+    margin-bottom:1rem;
+}
+h4, p, .text-4{
+  font-size:1rem;
+  margin-bottom:1rem;
+  line-height:1.5;
+}
+
+a{
+  color:coral;
+}
+/*spacer*/
+.spacer{
+  height:30px;
+}
+/*stile menu*/
+:root {
+  --menu-bg: #333237;
+  --menu-color: white;
+  --red-color:#952B39;
+  
+}
+
+.header {
+  background-color: var(--menu-bg);
+position:fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  padding: 10px 15px;
+ 
+}
+.header-content{
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+/*lente ricerca*/
+
+
+/*logo*/
+.header-logo,
+.header-quick {
+  display: flex;
+  align-items: center;
+  color: var(--menu-color);
+  text-decoration:none;
+  padding: 3px 10px;
+}
+
+.logo-container {
+  float: left;
+}
+.header-logo img {
+  width: 100%;
+  min-width: 4px;
+  height: auto;
+}
+.nav-menu {
+  padding: 10px;
+  margin: 0;
+}
+.nav-menu a:hover {
+  color:black;
+}
+.nav-menu li {
+  display: inline-block;
+}
+.nav-menu li a{
+  color: var(--menu-color);
+  opacity: 0.8;
+  display: block;
+  padding: 16px;
+  font-size: 16px;
+  text-decoration:none;
+}
+/*media query hamburger menu*/
+@media (max-width:1000px) {
+  
+  .nav-menu {
+    z-index:999;
+    position: absolute;
+    top: 72px;
+    left: 0;
+    background-color:var(--menu-bg);
+    width: 100%;
+    height: 100vh;
+    height: 0vh;
+    overflow: hidden;
+    transition: all 1s cubic-bezier(0.215, 0.61, 0.335, 1);
+   
+  }
+  .nav-menu li {
+    widht: 100%;
+    border-bottom: 1px solid black;
+    margin-top:1rem;
+    padding-top:1rem;
+    display:block;
+    padding:0.5rem 0;
+  }
+  
+  .menu-open .nav-menu {
+    height:80vh;
+  }
+  .icon-hamburger {
+    height: 50px;
+    width: 40px;
+    margin-left: 20px;
+    padding-top: 5px;
+    
+  }
+  .icon-hamburger span {
+    height: 2px;
+    width: 30px;
+    background: var(--menu-color);
+    position: relative;
+    display: block;
+    margin-top: 11px;
+    transition: all 1s;
+  }
+  .menu-open .icon-hamburger span:nth-child(1) {
+    transform: rotate(45deg) translateY(9px);
+  }
+  .menu-open .icon-hamburger span:nth-child(2) {
+    transform: rotate(-45deg) translateY(-9px);
+  }
+  .header-quick {
+    display: flex;
+    justify-content: flex-end;
+    width: 30%;
+   
+  }
+}
+
+/*bottoni*/
+.button{
+  font-size: 1rem;
+  text-transformation: uppercase;
+  background: #952B39;
+  color:white;
+  border-radius: 4px;
+  font-weight:600;
+  text-decoration:none;
+  padding:0.5rem 0.5rem;
+  
+}
+
+.button:hover{
+  color:grey;
+  
+}
+.button-hover{
+  background:red;
+  text-decoration:none;
+  padding:0.5rem 0.5rem;
+  
 }
 /*slider*/
-.slider-container {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
+
+.carousel-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width:100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  
 }
-/*azienda agricola*/
-.gray-box {
+.carousel-caption{
+ position: absolute;
+ top:50%;
+ justify-content: center;
+}
+
+.carousel-caption h5{
+  color:white;
+
+
+}
+
+
+
+/*prodotti*/
+
+.prodotti {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: justify;
+  
+}
+.product-box{
+   border: 2px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  height: 100%;   
+}
+.product-box:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+
+.title-container{
+  
+  color:var(--menu-color);
+  align-items:center;
+  text-align: center;
+  background-color:var(--red-color);
+  width:100%;
+  border:5px var(--menu-bg);
+  padding:10px;
+
+  
+ 
+  
+}
+.prodotti-immagine{
+  width:20%;
+  }
+/*gallery*/
+#galleria {
+  background-color: #f8f8f8;
+  padding: 50px 0;
+}
+
+#galleria .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+#galleria h2 {
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 30px;
+}
+
+#galleria .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.gallery-item {
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.gallery-item:hover img {
+  transform: scale(1.1);
+}
+
+.gallery-item .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  bottom:0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50%;
-  height: 100%;
-  padding: 30px;
-  background-color: rgba(128, 128, 128, 0.8);
-  color: #fff;
-  box-sizing: border-box;
-  z-index: 1;
-  font-size: 18px;
-  line-height
-}
-.gray-box h2 {
-  margin: 0;
-  font-size: 24px;
-}
-.gray-box p{
-   overflow: auto;
-  height: 100%;
-  margin: 0;
-}
-
-@media (max-width: 767px) {
-  .gray-box {
-    width: 9z0%;
-    padding: 20px;
-  }
-}
-
-@media (max-width: 576px) {
-  .gray-box {
-    width: 50%;
-    padding: 20px;
-  }
- 
-}
-
-.slider {
-  white-space: nowrap;
-  font-size: 0;
-  transition: transform 0.3s ease-in-out;
-}
-
-.slider img {
-  display: inline-block;
   width: 100%;
-  height: auto;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
-.slider-button {
+.gallery-item:hover .overlay {
+  opacity: 1;
+}
+
+.gallery-item .overlay-content {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+}
+
+.gallery-item .overlay-content h3 {
   font-size: 20px;
-  line-height: 40px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.prev-button {
-  left: 10px;
-}
-
-.next-button {
-  right: 10px;
-}
-
-section {
-  margin: 20px;
-  padding: 20px;
-  background-color: #fff;
-  flex-basis: 400px;
-}
-.container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 30px;
-}
-.company-box {
-  background-color: #f5f5f5;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 30px;
-  box-sizing: border-box;
-  z-index: 1;
-}
-
-@media (max-width: 768px) {
-  .company-box {
-    padding: 15px;
-  }
-}
-/*sezione chi siamo*/
-.box {
-  background-color: #f2f2f2;
-  padding: 20px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  margin-bottom: 30px;
-  color: grey;
-  font-family: "Concert One", cursive;
-}
-.box {
-  font-size: 20px; /* dimensione del font predefinita */
-}
-
-@media only screen and (max-width: 767px) {
-  /* regole per schermi con larghezza massima di 767px */
-  .box {
-    font-size: 12px; /* dimensione del font ridotta */
-  }
-}
-
-.chi-siamo {
-  background-color: #fff;
-  padding: 20px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  margin-bottom: 30px;
-  margin-top: 30px;
-  text-align: center;
-  
-}
-
-.chi-siamo h3 {
-  margin-top: 0;
-  margin-bottom: 20px;
-  font-size: 24px;
-}
-
-.chi-siamo p {
-  font-size: 18px;
-  line-height: 1.5;
-}
-/*prodotti*/
-.prodotti {
-  color:grey;
-  background-color: #f7f7f7;
-  padding: 50px 0;
-  font-size: 20px;
-}
-
-.prodotti h2 {
-  text-align: center;
-  margin-bottom: 30px;
-
-  
-}
-
-.prodotti .col-md-4 {
-  margin-bottom: 30px;
-}
-
-.prodotti img {
-  width: 10%;
-  height: auto;
-  
-}
-
-.prodotti h3 {
-  font-size: 18px;
-  margin-top: 20px;
   margin-bottom: 10px;
 }
 
-.prodotti p {
-  font-size: 14px;
-  line-height: 1.5;
+.gallery-item .overlay-content p {
+  font-size: 16px;
+  margin-bottom: 0;
 }
+/*torna a inizio pagina*/
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color:#952B39;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 50px;
+  font-size: 14px;
+  text-decoration: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.back-to-top:hover{
+ color:#5c0619;
+}
+.back-to-top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+/*contatti*/
+.contact-section {
+  background-color: var(--red-color);
+  padding: 60px 0;
+  text-align: center;
+  color:var(--menu-color);
+  display:flex;
+  
+  
+}
+
+.section-heading {
+  margin-bottom: 40px;
+  font-family: "Concert One", cursive;
+}
+
+.contact-info {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  font-family: "Roboto", sans-serif;
+}
+
+.contact-item {
+  margin-right: 40px;
+}
+
+.contact-item i {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.contact-form {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+/*form*/
+.form-container {
+  margin: 30px 0;
+  padding: 30px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+button[type="submit"] {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color:#952B39 ;
+}
+
 
 /*footer*/
 footer {
   font-family: "Concert One", cursive;
-  background-color: #333;
+  background-color: #dddddd;
   text-align: center;
+  display:flex;
+  width:100%;
+  height:100px;
+  padding: 0;
+  color:var(--menu-bg);
+  justify-content:center;
+  flex-content:center;
+margin-bottom:0;
+}
+footer-items-container{
+justify-content:center;
+
+}
+footer a {
+  color: var(--menu-bg);
+
+}
+footer a:hover {
+  color: #952B39; 
+}
+footer .copyright {
+  margin-top:10px;
+
+  font-size: 12px;
+  color: #999;
+
 }
 
 /*mediaquery*/
-@media only screen and (max-width: 768px) {
- .hamburger-menu {
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px;
+/*media-form*/
+@media screen and (max-width: 768px) {
+  .contact-form {
+    width: 100%;
+  }
+  
+  .form-group {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .form-group label {
+    margin-bottom: 10px;
+  }
+  
+  .form-group input,
+  .form-group textarea {
+    width: 100%;
+  }
+  
+  .form-group textarea {
+    height: 100px;
+  }
+  
+  .form-group button {
+    margin-top: 10px;
+  }
 }
 
-.hamburger-icon {
-  width: 30px;
-  height: 20px;
-  position: relative;
-}
-
-.hamburger-icon:before,
-.hamburger-icon:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #000;
-  left: 0;
-}
-
-.hamburger-icon:before {
-  top: 0;
-}
-
-.hamburger-icon:after {
-  bottom: 0;
-}
-
-/* Nascondi la nav originale */
-nav {
-  display: none;
-}
-
-/* Mostra la nav quando l'hamburger menu è attivo */
-.show-nav nav {
-  display: block;
-}
