--- a/style.css
+++ b/style.css
@@ -486,3 +486,190 @@ footer .copyright {
   }
 }
 
+
+}
+/*chi-siamo*/
+#chi-siamo{
+  padding-top:40px;
+}
+  
+
+/*prodotti*/
+
+/*card*/
+.card{
+  width:100%;
+  height:100%;  
+}
+
+.card-inner{
+position:relative;
+  height:100%;
+  transform-style: preserve-3d;
+  transition:transform 0.5s;
+}
+
+.card:hover .card-inner{
+transform:rotateY(180deg);
+}
+
+.card-body{
+position:absolute;
+  inset:0;
+  display:grid;
+  place-items:center;
+  backface-visibility: hidden;
+  justify-content: center;
+  text-align:center;
+  width:100%;
+  margin-right:3px;
+  margin-left:3px;
+
+}
+
+.card-body--front{
+background-color:white;
+   backface-visibility: hidden;
+}
+
+.card-body--back{
+  background-color:white;
+transform:rotateY(180deg);
+  
+}
+/*fine card*/
+
+
+.prodotti-container{
+   background-image: url(images/468197.jpg);;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width:100%;
+  
+  
+}
+.prodotti {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: justify;
+  padding-top:70px;
+  
+}
+.prodotti .col-md-6{
+  margin-bottom:30px;
+  }
+.product-box{
+   border: 2px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  height: 50rem;
+  background-color:white;
+  display:flex;
+  align-items:center;
+ 
+}
+
+
+.title-container{
+  
+  color:var(--menu-bg);
+  align-items:center;
+  text-align: center;
+  background-color:var(--red-color);
+  width:100%;
+  border:5px var(--menu-bg);
+  padding:30px;
+
+  
+ 
+  
+}
+.prodotti-immagine{
+  width:80%;
+  }
+
+/*servizi*/
+
+#servizi {
+  
+  background-color:var(--menu-bg);
+  padding: 10px 0;
+}
+
+.container {
+  padding-top:30px;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.section-title {
+  text-align: center;
+
+  margin-bottom: 30px;
+}
+
+.servizi-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.servizio {
+  flex-basis: 30%;
+  margin-bottom: 30px;
+  text-align: center;
+  
+}
+
+.servizio-icon {
+  width: 80px;
+  height: 80px;
+  margin: 0 auto 10px;
+
+}
+
+.servizio-icon i{
+ 
+  font-size:3rem;
+  object-fit: cover;
+}
+
+.servizio-title {
+  
+  margin-bottom: 10px;
+}
+/* Stili per schermi fino a 768px */
+@media (max-width: 768px) {
+  .servizi-container {
+    flex-direction: column;
+  }
+
+  .servizio {
+    flex-basis: 100%;
+  }
+}
+
+/* Stili per schermi da 768px a 992px */
+@media (min-width: 768px) and (max-width: 992px) {
+  .servizi-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .servizio {
+    flex-basis: 50%;
+  }
+}
+
+/* Stili per schermi superiori a 992px */
+@media (min-width: 992px) {
+  .servizio {
+    flex-basis: 30%;
+  }
+}
+
+
+/*fine servizi*/
